feat: full text search
